--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,5 @@
 <div class="products col-xs-8">
-<h1>Product Detail | Awesome Marketplace</h1>
+<title>Product Detail | Awesome Marketplace</title>
 <%= image_tag(@product.img_url, size:"500x500")%>
 <br>
 Title: <%= @product.name %><br>
