--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,18 +2,33 @@
 <html>
 <head>
   <title>Chute</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 
   <script type="application/javascript" src="https://cdn.socket.io/socket.io-1.1.0.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
-  
-  <%= csrf_meta_tags %>
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>  
+  <%= csrf_meta_tags %>  
+  <link href="//netdna.bootstrapcdn.com/bootswatch/2.3.2/united/bootstrap.min.css" rel="stylesheet">
+
+
 </head>
 <body>
 
-<%= yield %>
+<div class="container">
+    <div class="header">
+        <ul class="nav nav-pills pull-right">
+          <li class="active"><a href="/">Home</a></li>
+          <li><a href="#/about">About</a></li>
+        </ul>
+        <h3 class="text-muted">Market Place</h3>
+       	<hr>
+ 	</div>
+
+ 	<%= yield %>
+
+      
+    </div>
+
 
 </body>
 </html>
