auto scroll end

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -35,7 +35,7 @@
   vertical-align: bottom;
 }
 .chatTitle{
-  background:#00b0ff;
+  background:#e86537;
   color: #fff;
   font-size: 1.2em;
 }
@@ -85,3 +85,4 @@ table{
 .container{
   width: 90% !important;
 }
+
