--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,8 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 
   <script type="application/javascript" src="https://cdn.socket.io/socket.io-1.1.0.js"></script>
-  
-  <%= csrf_meta_tags %>  
+
+  <%= csrf_meta_tags %>
   <link href="//netdna.bootstrapcdn.com/bootswatch/2.3.2/united/bootstrap.min.css" rel="stylesheet">
 
 
@@ -17,7 +17,7 @@
 <div class="container">
     <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="/">Home</a></li>
+          <li class="active"><a style="background: #e86537" href="/">Home</a></li>
           <li><a href="#/about">About</a></li>
         </ul>
         <h3 class="text-muted">Market Place</h3>
@@ -26,7 +26,7 @@
 
  	<%= yield %>
 
-      
+
     </div>
 
 
