--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -16,7 +16,7 @@ body {
 .masonry-photo {
     margin: 1em;
     display: none;
-    max-width: 300px;
+    max-width: 400px;
 }
 
 .masonry-photo.loaded {
@@ -58,4 +58,12 @@ body {
 .container{
 	width: 95% !important;
 }
+
+ul {
+  max-height: 400px;
+  overflow: auto;
+  list-style-type: none;
+  margin-top: 20px;
+}
+
 
