add header link. polished login form

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -84,3 +84,9 @@ footer ul li {
   float: left;
   margin-left: 10px;
 }
+.nav-pills >li > a.login_button{
+  display: inline-block;
+}
+#inline {
+  display: inline-block;
+}
