--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,19 @@
 
 <div class="container">
     <div class="header">
-        <ul class="nav nav-pills pull-right">
+        <ul class="nav nav-pills pull-right" role="tablist">
           <li class="active"><a style="background: #e86537" href="/">Home</a></li>
           <li><a href="#/about">About</a></li>
+          <li>
+            <% if user_signed_in? %>
+              Logged in as <strong><%= current_user.email %></strong>.
+              <%= link_to 'Edit profile', edit_user_registration_path, class: "login_button"  %> |
+              <%= link_to "Logout", destroy_user_session_path, class: "login_button", method: :delete %>
+            <% else %>
+              <%= link_to "Sign up", new_user_registration_path, class: "login_button" %> |
+              <%= link_to "Login", new_user_session_path, class: "login_button" %>
+            <% end %>
+          </li>
         </ul>
         <h3 class="text-muted">Market Place</h3>
        	<hr>
