--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,51 @@
-<h2>Sign up</h2>
+<div id="wrapper">
+  <!--SLIDE-IN ICONS-->
+  <div class="user-icon"></div>
+  <div class="pass-icon"></div>
+  <%= form_for(resource, html:{class:'login-form'}, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= devise_error_messages! %>
+    <div class="header">
+      <!--TITLE--><h1>Signup Form</h1><!--END TITLE-->
+    <!--DESCRIPTION--><span>Toast to the begining of your smart stores!</span><!--END DESCRIPTION-->
+    </div>
+    <div class="content">
+      <%= f.email_field :email, autofocus: true, placeholder:"Email", class:"input username" %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+      <%= f.password_field :password, autocomplete: "off", placeholder:"Password", class:"input password" %>
+      <% if @validatable %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br />
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+      <%= f.password_field :password_confirmation, autocomplete: "off", placeholder:"Password Confirmation", class:"input password-confirm" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @validatable %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+    <div class="footer">
+      <%= f.submit "Sign up", class:"button" %>
+      <div class="register"><%= render "devise/shared/links" %></div>
+    </div>
+  <% end %>
+</div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+<script type="text/javascript">
+$(document).ready(function() {
+  $(".username").focus(function() {
+    $(".user-icon").css("left","-48px");
+  });
+  $(".username").blur(function() {
+    $(".user-icon").css("left","0px");
+  });
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  $(".password").focus(function() {
+    $(".pass-icon").css("left","-48px");
+  });
+  $(".password").blur(function() {
+    $(".pass-icon").css("left","0px");
+  });
+  $(".password-confirm").focus(function() {
+    $(".pass-icon").css("left","-48px");
+  });
+  $(".password-confirm").blur(function() {
+    $(".pass-icon").css("left","0px");
+  });
+});
+</script>
