--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,9 @@
 <div id="wrapper">
   <!--SLIDE-IN ICONS-->
   <div class="user-icon"></div>
-  <div class="pass-icon"></div>
+  <div class="passSignup-icon"></div>
+  <div class="email-icon"></div>
+  <div class="passconfirm-icon"></div>
   <%= form_for(resource, html:{class:'login-form'}, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
     <div class="header">
@@ -9,7 +11,8 @@
     <!--DESCRIPTION--><span>Toast to the begining of your smart stores!</span><!--END DESCRIPTION-->
     </div>
     <div class="content">
-      <%= f.email_field :email, autofocus: true, placeholder:"Email", class:"input username" %>
+      <%= f.text_field :name, autofocus: true, placeholder:"First Name", class:"input username" %>
+      <%= f.email_field :email, autofocus: true, placeholder:"Email", class:"input email" %>
 
       <%= f.password_field :password, autocomplete: "off", placeholder:"Password", class:"input password" %>
       <% if @validatable %>
@@ -35,17 +38,24 @@ $(document).ready(function() {
     $(".user-icon").css("left","0px");
   });
 
+  $(".email").focus(function() {
+    $(".email-icon").css("left","-48px");
+  });
+  $(".email").blur(function() {
+    $(".email-icon").css("left","0px");
+  });
+
   $(".password").focus(function() {
-    $(".pass-icon").css("left","-48px");
+    $(".passSignup-icon").css("left","-48px");
   });
   $(".password").blur(function() {
-    $(".pass-icon").css("left","0px");
+    $(".passSignup-icon").css("left","0px");
   });
   $(".password-confirm").focus(function() {
-    $(".pass-icon").css("left","-48px");
+    $(".passconfirm-icon").css("left","-48px");
   });
   $(".password-confirm").blur(function() {
-    $(".pass-icon").css("left","0px");
+    $(".passconfirm-icon").css("left","0px");
   });
 });
 </script>
