--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,16 +25,17 @@
               Logged in as <strong><%= current_user.email %></strong>.
               <%= link_to 'Edit profile', edit_user_registration_path, class: "login_button"  %> |
               <%= link_to "Logout", destroy_user_session_path, class: "login_button", method: :delete %>
+              <div id="hidden" data-username="<%= current_user.name %>">
             <% else %>
               <%= link_to "Sign up", new_user_registration_path, class: "login_button" %> |
               <%= link_to "Login", new_user_session_path, class: "login_button" %>
             <% end %>
           </li>
         </ul>
-        <h3 class="text-muted">Market Place</h3>
-       	<hr>
+        <h3 class="text-muted">T-Bay</h3>
+        <hr>
     </div>
- 	
+
 
  	<%= yield %>
 
