--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,13 +1,28 @@
 <title>Market Place</title>
 <body>
   <div class="hero-unit">
-      <h1>Your Smart Store</h1>
+      <h1>T-Bay</h1>
       <p>Here, you can find anything</p>
   </div>
   <hr>
   <div class="row-fluid">
     <div style="display:block">
-      <span class="label label-default">Top Products!</span>
+      <h4><a>Category</a></h4>
+    </div>
+    <div id="category-wall" class="well">
+    <% @categories.each do |cat| %>
+      <a class="btn btn-default" href="<%= cat.id %>">
+        <%= cat.name %>
+      </a>
+    <% end %>
+    </div>
+  </div>
+
+  <div class="row-fluid">
+    <div style="display:block">
+      <button class="btn btn-success" type="button">
+          Top Products! <span class="badge">5</span>
+      </button>
     </div>
     <% @top_view.each do |product| %>
       <div class="top-products">
@@ -20,6 +35,8 @@
 
     <% end %>
   </div>
+  <hr>
+
   <div class="row-fluid" ng-controller="MainCtrl">
     <div class="btn-group">
         <button class="btn btn-primary" ng-click="add()">More products!</button>
@@ -37,3 +54,4 @@
     </ul>
   </div>
 </body>
+
