remove bad data. fix css. polish

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -90,4 +90,9 @@ footer ul li {
   display: inline-block;
 }
 
-
+div.hero-unit{
+  background-color:#99ae47;
+  text-align: center;
+  max-height: 225px;
+  padding: 0px;
+}
