--- a/app/assets/stylesheets/products.css (Rajat Kumar's conflicted copy 2014-12-14).scss
+++ b/app/assets/stylesheets/products.css (Rajat Kumar's conflicted copy 2014-12-14).scss
@@ -103,6 +103,7 @@ table{
   margin: 10px;
   max-width: 200px;
 }
+
 #hidden{
   display: none;
 }
@@ -114,6 +115,6 @@ table{
   width: 80%;
 }
 #btn-tbay{
-  background: #99ae47 !important;
+  background-color: #99ae47 !important;
 }
 
