--- a/app/views/products/_chat.html.erb
+++ b/app/views/products/_chat.html.erb
@@ -1,5 +1,4 @@
-<body>
-  <div class="chat col-xs-5" ng-controller="ChatController">
+  <div ng-controller="ChatController">
     <!-- chatbox -->
     <div class="chatTitle">
       <div align="center">Chat</div>
@@ -21,4 +20,3 @@
       <button type="button" class="btn btn-primary" ng-click="sendMessage()">Send</button>
     </div>
   </div>
-  </body>
