--- a/app/assets/stylesheets/gallery.css
+++ b/app/assets/stylesheets/gallery.css
@@ -1,23 +1,27 @@
 .grid {
     border: solid 1px #ccc;
-    padding: 10px 10px 0 0;
+    padding: 10px 10px 0px 0px;
 }
 .grid li {
     display: inline-block;
     width: 100px;
     height: 100px;
     border: solid 1px #ccc;
-    margin: 0 0 10px 10px;
+    margin: 10px 10px 0px 0px;
     background: #eee;
 }
 body {
     margin-top: 1em;
+    margin:10px;
 }
 
 .masonry-photo {
-    margin: 1em;
+    /*margin: 1em;*/
     display: none;
-    max-width: 400px;
+    max-width: 200px;
+    max-height: 200px;
+    margin:30px;
+    margin-right: 0px;
 }
 
 .masonry-photo.loaded {
@@ -65,6 +69,8 @@ ul {
   overflow: auto;
   list-style-type: none;
   margin: 20px 0 0 0 !important;
+  margin:20px;
+  vertical-align: top;
 }
 
 .nav-pills >li > a.login_button{
