--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,18 +7,17 @@
   <%= form_for(resource, html:{class:'login-form'}, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
     <div class="header">
-      <!--TITLE--><h1>Signup Form</h1><!--END TITLE-->
-    <!--DESCRIPTION--><span>Toast to the begining of your smart stores!</span><!--END DESCRIPTION-->
+      <!--TITLE--><h1>Signup</h1><!--END TITLE-->
+    <!--DESCRIPTION--><span>Howdy, fellow trader!<br>Please create an account to explore the rest of tBay.</span><!--END DESCRIPTION-->
     </div>
     <div class="content">
       <%= f.text_field :name, autofocus: true, placeholder:"First Name", class:"input username" %>
-      <%= f.email_field :email, autofocus: true, placeholder:"Email", class:"input email" %>
+      <%= f.email_field :email, autofocus: false, placeholder:"Email", class:"input email" %>
 
       <%= f.password_field :password, autocomplete: "off", placeholder:"Password", class:"input password" %>
       <% if @validatable %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br />
-
+        <div style="color:gray"><em>(<%= @minimum_password_length %> characters minimum)</em></div>
+      <% end %>
       <%= f.password_field :password_confirmation, autocomplete: "off", placeholder:"Password Confirmation", class:"input password-confirm" %>
     </div>
 
