--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,12 +1,38 @@
-<div class="products col-xs-7">
-  <title>Product Detail | Awesome Marketplace</title>
-  <%= image_tag(@product.img_url, size:"500x500")%>
-  <br>
-  Title: <%= @product.name %><br>
-  Price: $<%= @product.price %><br>
-  Category: <%= @product.category %><br>
+<div class="col-xs-7" style="float:left">
+  <div class="products-detail">
 
-  <br>
-  <%= link_to 'Back to All Products', "/#" %>
+    <%= image_tag(@product.img_url, size:"500x500")%>
+
+    <br>
+    Title: <%= @product.name %><br>
+    Price: $<%= @product.price %><br>
+    Category: <%= @product.category.name %><br>
+    <br>
+    <%= link_to 'Back to All Products', "/#" %>
+  </div>
+
 </div>
-<%= render "chat" %>
+<div class="chat col-xs-5">
+
+  <div id="mail-form2">
+    <%= form_for @contact_form, html:{class:"smart-green"} do |f| %>
+      <h4> Contact Form </h4>
+      <label>
+        <%= f.text_field :name, :required => false, placeholder: "Your Full Name" %>
+      </label>
+      <label>
+         <%= f.email_field :email, :required => false, placeholder: "Your Email"%>
+      </label>
+      <label>
+        <span> Messages:</span>
+        <%= f.text_area :message, rows: "10"%>
+      </label>
+        <%= f.hidden_field :id, value: @product.id %>
+      <%= f.submit "Send Email", class:"btn btn-default" %>
+    <% end %>
+  </div>
+  </div>
+
+<div class="chat col-xs-5">
+  <%= render "chat" %>
+</div>
