--- a/app/views/products/welcome.html.erb
+++ b/app/views/products/welcome.html.erb
@@ -32,7 +32,7 @@
     <div class="well">
       <div id="category-wall">
       <% @categories.each do |cat| %>
-        <a class="btn btn-default" id="<%= cat.id %>" ng-click="updateCategory()">
+        <a class="btn btn-default" id="<%= cat.id %>">
           <%= cat.name %>
         </a>
       <% end %>
