fix flash of contact form. fix chatbox css

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
     <%= devise_error_messages! %>
     <div class="header">
       <!--TITLE--><h1>Signup</h1><!--END TITLE-->
-    <!--DESCRIPTION--><span>Howdy, fellow trader!<br>Please create an account to explore the rest of tBay.</span><!--END DESCRIPTION-->
+    <!--DESCRIPTION--><span>Howdy, fellow trader!<br>Please create an account to explore tBay.</span><!--END DESCRIPTION-->
     </div>
     <div class="content">
       <%= f.text_field :name, autofocus: true, placeholder:"First Name", class:"input username" %>
