--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 <body>
   <% flash.each do |name, msg| %>
     <% if msg.is_a?(String) %>
-      <div class="alert alert-<%= name == :notice ? "success" : "error" %>">
+      <div class="alert alert-<%= name == "notice"? "success" : "error" %>">
         <a class="close" data-dismiss="alert">&#215;</a>
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
       </div>
@@ -41,7 +41,7 @@
             <% end %>
           </li>
         </ul>
-        <h3 class="text-muted">tBay</h3> 
+        <h3 class="text-muted">tBay</h3>
         <hr>
     </div>
 
