--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,7 +16,7 @@
 
   <div id="mail-form2">
     <%= form_for @contact_form, html:{class:"smart-green"} do |f| %>
-      <h4> Contact Form </h4>
+      <h4 align="center"> Contact Form </h4>
       <label>
         <%= f.text_field :name, :required => false, placeholder: "Your Full Name" %>
       </label>
