--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -18,7 +18,10 @@
 </body>
 
 <h1>About tBay</h1>
-	<p> Users can list things that they want to sell and find listed things that they can buy from other users. We propose to build an online classifieds website where people can list things that they want to sell or giveaway. It’s not intended to be a marketplace as we want the transactions to be offline. We intend to be a place to list and discover products from those in our neighborhood. Transaction request can be sent on the website to the email address of the owner and the offline transaction will follow. 
+	<p> tBay is an online classifieds website where people can list things that they want to sell or giveaway. It’s not intended to be a marketplace as we want the transactions to be offline. We intend to be a place to list and discover products from those in our neighborhood. Transaction request can be sent on the website to the email address of the owner and the offline transaction will follow. 
+
+	<br><br>
+	Created By: Khoi Tran, Rajat Kumar and Yuki Nakano for CSC340
 	</p>
 
 </html>
